--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   date_time_picker: ^2.1.0
   flutter_datetime_picker: ^1.5.1
   table_calendar: ^3.0.8
+  intl: ^0.17.0
+  date_format: ^2.0.7
 
 dev_dependencies:
   flutter_test:
